--- a/nicepage.css
+++ b/nicepage.css
@@ -45272,7 +45272,6 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-nav-1 {
   font-weight: 700;
   font-size: 1.25rem;
-  letter-spacing: normal;
 }
 
 .u-header .u-nav-2 {
@@ -45283,6 +45282,10 @@ a.u-link.u-text-hover-grey-90:hover {
     width: auto;
     margin-top: -39px;
   }
+
+  .u-header .u-nav-1 {
+    letter-spacing: normal;
+  }
 }
 
 
@@ -45292,35 +45295,38 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 120px;
+  min-height: 196px;
 }
 
 .u-footer .u-text-1 {
-  width: 417px;
-  margin: 49px auto;
+  font-size: 1.25rem;
+  margin: 60px 341px 60px 382px;
 }
 @media (max-width: 1199px) {
-  .u-footer .u-sheet-1 {
-    min-height: 99px;
+  .u-footer .u-text-1 {
+    width: 417px;
+    margin-right: 241px;
+    margin-left: 282px;
   }
 }
 @media (max-width: 991px) {
-  .u-footer .u-sheet-1 {
-    min-height: 76px;
+  .u-footer .u-text-1 {
+    margin-right: 131px;
+    margin-left: 172px;
   }
 }
 @media (max-width: 767px) {
-  .u-footer .u-sheet-1 {
-    min-height: 57px;
+  .u-footer .u-text-1 {
+    margin-top: 104px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media (max-width: 575px) {
-  .u-footer .u-sheet-1 {
-    min-height: 36px;
-  }
-
   .u-footer .u-text-1 {
     width: 340px;
+    margin-right: 19px;
+    margin-left: -19px;
   }
 }
 
